tests/purs/failing/RowDiffs/A.purs
module RowDiffs.A where

a = [{ a: 1, b: 2 }, { a: 1 }]
